Fix venue photo on mobile.

--- a/static/css/objects.css
+++ b/static/css/objects.css
@@ -242,19 +242,12 @@ header {
     }
     .js .venue-home .city-level    { width: 80%; margin: 15px auto;}
 }
-@media (min-height: 300px) { .js .leaflet-map { height: 250px; } }
-@media (min-height: 450px) { .js .leaflet-map { height: 304px; } }
+@media (min-height: 300px) { .js .leaflet-map { height: 250px; } .venue-photo { max-height: 250px; overflow: hidden;}}
+@media (min-height: 450px) { .js .leaflet-map { height: 304px; } .venue-photo { max-height: 304px; overflow: hidden;}}
 @media (min-height: 550px) { .js .venue-home .leaflet-map { height: 535px; } }
 @media (min-height: 630px) { .js .venue-home .leaflet-map { height: 620px; } }
 @media (min-height: 725px) { .js .venue-home .leaflet-map { height: 725px; } }
 @media (min-height: 800px) { .js .venue-home .leaflet-map { height: 800px; } }
-
-@media (min-height: 450px) {
-  .venue-photo-location {
-    max-height: 304px;
-    overflow: hidden;
-  }
-}
 
 .sponsor-m > li {
     float: left !important;
